--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@fontsource-variable/inter": "^5.0.18",
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -17,18 +20,29 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^3.0.5",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
+    "embla-carousel-wheel-gestures": "^8.0.1",
     "framer-motion": "^11.2.10",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.387.0",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.51.5",
+    "react-player": "^2.16.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-svgr": "^4.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
