--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,23 @@
-server {
-  listen 80;
+# nginx.conf
 
-  server_name localhost;
+events {
+  worker_connections 1024;
+}
 
-  location / {
-    root /usr/share/nginx/html;
-    try_files $uri /index.html;
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
+
+  sendfile        on;
+  keepalive_timeout  65;
+
+  server {
+    listen 80;
+    server_name localhost;
+
+    location / {
+      root /usr/share/nginx/html;
+      try_files $uri /index.html;
+    }
   }
 }
