--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,3 @@
-# nginx.conf
-
 events {
   worker_connections 1024;
 }
@@ -13,7 +11,7 @@ http {
 
   server {
     listen 80;
-    server_name localhost;
+    server_name localhost www.localhost;
 
     location / {
       root /usr/share/nginx/html;
