--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-use-gesture": "^9.1.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-radar": "^0.9.6",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.23.8"
   },
