--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "typescript": "^5.5.3",
     "@emailjs/browser": "^4.3.3",
     "@fontsource-variable/inter": "^5.0.18",
     "@hookform/resolvers": "^3.6.0",
