--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,21 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/*", "src/components/react-svg"],
+  "include": ["src", "src/components/react-svg"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
