--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.387.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^2.0.5",
