--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^3.0.5",
     "@types/react-gtm-module": "^2.0.3",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -39,6 +40,7 @@
     "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
+    "react-phone-number-input": "^3.4.3",
     "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
@@ -47,6 +49,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
+    "uuid": "^10.0.0",
     "vite-plugin-radar": "^0.9.6",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.23.8"
