--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/themes": "^3.0.5",
     "@types/react-gtm-module": "^2.0.3",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "embla-carousel": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "embla-carousel-wheel-gestures": "^8.0.1",
@@ -48,7 +52,6 @@
     "react-use-gesture": "^9.1.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.3",
     "uuid": "^10.0.0",
     "vite-plugin-radar": "^0.9.6",
     "vite-plugin-svgr": "^4.2.0",
@@ -58,9 +61,10 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -68,7 +72,7 @@
     "postcss": "^8.4.38",
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
