--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VITE_BASE_URL_MINIO=...
-VITE_BASE_URL_SQUARE=...
+VITE_API_BASE_URL_SQUARE=...
 VITE_API_KEY_SQUARE=...
+VITE_SQUARE_LOCATION_ID=...
