--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 VITE_BASE_URL_MINIO=...
-VITE_API_BASE_URL_SQUARE=...
+VITE_API_BWEB_ASE_URL=...
 VITE_API_KEY_SQUARE=...
 VITE_SQUARE_LOCATION_ID=...
