--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 VITE_BASE_URL_MINIO=...
-VITE_API_BWEB_ASE_URL=...
 VITE_API_KEY_SQUARE=...
 VITE_SQUARE_LOCATION_ID=...
+VITE_DASHBOARD_KEY=...
+# VITE_API_WEB_BASE_URL=http://localhost:8800/api/v1
+VITE_API_WEB_BASE_URL=...
