--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "embla-carousel": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "embla-carousel-wheel-gestures": "^8.0.1",
