--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@fontsource-variable/inter": "^5.0.18",
+    "@google-cloud/local-auth": "^3.0.1",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -35,6 +36,7 @@
     "embla-carousel-react": "^8.1.3",
     "embla-carousel-wheel-gestures": "^8.0.1",
     "framer-motion": "^11.2.10",
+    "google-auth-library": "^10.1.0",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.387.0",
     "moment-timezone": "^0.5.45",
